# corex

./: .gitignore  API_REFERENCE.md  LICENSE  QUICK_REFERENCE.md  README.md  RUNBOOK.md  SECURITY.md  SUMMARY.md  USAGE.md  demo.py  install.sh  production_check.py  pyproject.toml  release.sh  requirements.txt  setup.py  test_corex.py  test_industry_templates.py  test_wiki_workflow.py
.github/: dependabot.yml
.github/workflows/: ci-generate-project.yml  ci.yml
blog_bootstrap_session/: README.md  pyproject.toml  requirements.txt
blog_bootstrap_session/blog/: models.py
blog_bootstrap_session/blog_bootstrap_session/: asgi.py
blog_tailwind_jwt/: manage.py  tailwind.config.js
blog_tailwind_jwt/api/: urls.py
blog_tailwind_jwt/blog/: apps.py  urls.py  views.py
blog_tailwind_jwt/blog/api/: serializers.py
blog_tailwind_jwt/blog/migrations/: 0001_initial.py
blog_tailwind_jwt/blog_tailwind_jwt/: asgi.py  settings.py  wsgi.py
corex/: __init__.py  ast_refactor.py  cli.py  commands.py  env_checker.py  generators.py  template_validator.py  utils.py
corex/agent/: server.py
corex/commands/: __init__.py  app_commands.py  command_registry.py  deployment_commands.py  project_commands.py  utility_commands.py
corex/generators/: __init__.py  app_generator.py  base_generator.py  generator_factory.py  project_generator.py  template_cache.py
corex/templates/apps/: admin.py.j2  apps.py.j2  models.py.j2  urls.py.j2  views.py.j2
corex/templates/ci/: .gitlab-ci.yml.j2  github-actions.yml.j2
corex/templates/industry/: __init__.py  metadata.yml
corex/templates/projects/: .dockerignore.j2  Dockerfile.j2  README.md.j2  asgi.py.j2  base.html.j2  docker-compose.prod.yml.j2  docker-compose.yml.j2  env.j2  manage.py.j2  pyproject.toml.j2  requirements.txt.j2  settings.py.j2  urls.py.j2  wsgi.py.j2
crm_tailwind_session/: manage.py  package.json
crm_tailwind_session/crm/: apps.py  urls.py  views.py
crm_tailwind_session/crm/api/: serializers.py  views.py
crm_tailwind_session/crm/migrations/: 0001_initial.py
crm_tailwind_session/crm_tailwind_session/: urls.py
demo/: docker-compose.yml   package.json  pyproject.toml  requirements.txt  tailwind.config.js
demo/blog/: admin.py  apps.py  models.py  urls.py  views.py
demo/blog/migrations/: 0001_initial.py
demo/blog/tests/: test_models.py  test_views.py
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/templates/: base.html
ecommerce_postgres/: README.md  package.json  pyproject.toml  tailwind.config.js
ecommerce_postgres/ecommerce_postgres/: asgi.py  settings.py  urls.py
ecommerce_postgres/templates/: base.html
examples/blog_bootstrap_session/: manage.py  package.json
examples/blog_bootstrap_session/blog_bootstrap_session/: settings.py  urls.py  wsgi.py
examples/blog_bootstrap_session/templates/: base.html
examples/blog_tailwind_jwt/: README.md  package.json  pyproject.toml
examples/blog_tailwind_jwt/blog/: admin.py
examples/blog_tailwind_jwt/blog_tailwind_jwt/: urls.py
examples/blog_tailwind_jwt/templates/: base.html
examples/crm_tailwind_session/: README.md  pyproject.toml  requirements.txt  tailwind.config.js
examples/crm_tailwind_session/crm/: admin.py  models.py
examples/crm_tailwind_session/crm_tailwind_session/: asgi.py  settings.py  wsgi.py
examples/crm_tailwind_session/templates/: base.html
examples/ecommerce_postgres/: manage.py  requirements.txt
examples/ecommerce_postgres/ecommerce_postgres/: wsgi.py
examples/forum_tailwind_jwt/: .gitignore  pyproject.toml
examples/forum_tailwind_jwt/api/: views.py
examples/forum_tailwind_jwt/forum/: urls.py  views.py
examples/forum_tailwind_jwt/forum_tailwind_jwt/: asgi.py  settings.py
examples/forum_tailwind_jwt/templates/: base.html
examples/shop_tailwind_jwt/: README.md  package.json
examples/shop_tailwind_jwt/api/: serializers.py
examples/social_bootstrap_session/: README.md  pyproject.toml  requirements.txt
examples/wiki_bootstrap_allauth/: package.json  requirements.txt
forum_tailwind_jwt/: README.md  manage.py  package.json  requirements.txt  tailwind.config.js
forum_tailwind_jwt/forum/: admin.py  apps.py  models.py
forum_tailwind_jwt/forum_tailwind_jwt/: urls.py  wsgi.py
gui/corex-gui/: package-lock.json  package.json
gui/corex-gui/.next/: trace
myproject/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
myproject/api/: serializers.py  urls.py  views.py
myproject/myproject/: asgi.py  settings.py  urls.py  wsgi.py
myproject/templates/: base.html
scripts/: bootstrap.ps1  bootstrap.sh
shop_tailwind_jwt/: manage.py  pyproject.toml  tailwind.config.js
shop_tailwind_jwt/shop_tailwind_jwt/: asgi.py  wsgi.py
shop_tailwind_jwt/store/: admin.py  models.py
shop_tailwind_jwt/templates/: base.html
social_bootstrap_session/: manage.py  package.json
social_bootstrap_session/social/: admin.py
social_bootstrap_session/social_bootstrap_session/: wsgi.py
social_bootstrap_session/templates/: base.html
usages/: CONTRIBUTING.md  EXAMPLES.md  INDUSTRY_TEMPLATES.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  TEMPLATE_GUIDE.md  USAGE.md  pyproject.toml
wiki_bootstrap_allauth/: README.md  manage.py  pyproject.toml
wiki_bootstrap_allauth/templates/: base.html
wiki_bootstrap_allauth/wiki/: apps.py  models.py  views.py
wiki_bootstrap_allauth/wiki_bootstrap_allauth/: asgi.py  settings.py  urls.py
(+137 files in other folders)
