[tool.poetry]
name = "corex"
version = "0.1.0"
description = "A comprehensive Django scaffolding framework for rapid application development"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "corex"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
colorama = "^0.4.6"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
pathlib2 = "^2.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
corex = "corex.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
