[project]
name = "corex"
version = "1.0.0"
description = "A comprehensive Django scaffolding framework for rapid application development"
authors = [{name = "CoreX Team", email = "hello@corex.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["django", "scaffolding", "framework", "boilerplate", "code-generation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/ramazon07-cmd/corex"
Repository = "https://github.com/ramazon07-cmd/corex"
Documentation = "https://corex.readthedocs.io"

[project.scripts]
corex = "corex.cli:main"

[tool.poetry]
packages = [{include = "corex"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
coverage = "^7.3.0"
twine = "^4.0.2"
build = "^1.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
